fixed spacing bug
h4 had bug with not auto updating margin when changing window size.  Resolved by copying code from h1 and reconfiguring css

--- a/assets/Styles/styles.css
+++ b/assets/Styles/styles.css
@@ -94,10 +94,11 @@ h3 {
 }
 
 h4 {
-	font-size: 16px;
+	font-size: 15px;
+	text-transform: uppercase;
 	font-weight: 200;
-	margin-bottom: 50px;
-	width: 750px;
+	margin-bottom: 23px;
+	
 }
 
 p{
